--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
 }
 
 body {
-    background-image: url('./Img/green.jpg');
+    background-image: url('./Img/green_bg.jpg');
     background-size: cover;
     background-attachment: fixed;
     background-position: center;
